--- a/example.env
+++ b/example.env
@@ -1,10 +1,10 @@
 # Envar configuration: a file with correct
 # values should be located at `color-stack/.env`.
 
-PORT=80
+PORT=3000
 
-DB_HOST="db.website.com"
-DB_PORT=2345
-DB_USER="my_db_account"
-DB_PASSWORD="my_db_password"
-DB_DATABASE="db_name"
+DB_USER=root
+DB_PASSWORD=example
+DB_HOST=127.0.0.1
+DB_PORT=27017
+DB_DATABASE=admin
