--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@nestjs/core": "^7.4.4",
     "@nestjs/mongoose": "^7.0.2",
     "@nestjs/platform-express": "^7.4.4",
+    "@nestjs/serve-static": "^2.1.3",
     "chalk": "^4.1.0",
     "cross-env": "^7.0.2",
     "helmet": "^4.1.0",
