--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "reselect": "^4.0.0",
     "typesafe-actions": "^5.1.0"
   },
